# openvtt

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conandata.yml  conanfile.py  either.hpp  filesys.hpp  main.cpp  traced_exception.hpp  util.hpp
assets/maps/examples/: suzannes.ovm
assets/shaders/: axes.fs.glsl  axes.vs.glsl  basic_mvp.vs.glsl  basic_mvp_instanced.vs.glsl  collider.fs.glsl  collider_instanced.fs.glsl  highlight.fs.glsl  perlin.fs.glsl  perlin.vs.glsl  phong.fs.glsl  phong.vs.glsl  phong_instanced.fs.glsl  phong_instanced.vs.glsl  voxel.fs.glsl  voxel.vs.glsl
grammars/: dsl.g4  map.g4
map/: map_builtins.hpp  map_errors.hpp  map_parser.cpp  map_parser.hpp  map_visitor.cpp  map_visitor.hpp  object_cache.cpp  object_cache.hpp  scanline.hpp
renderer/: camera.cpp  camera.hpp  collider.cpp  collider.hpp  fbo.cpp  fbo.hpp  fps_counter.cpp  fps_counter.hpp  gizmos.cpp  gizmos.hpp  gl_macros.hpp  gl_wrapper.hpp  gl_wrapper_old.hpp  glad.cpp  glad.h  glm_wrapper.hpp  hover_highlighter.hpp  log_view.cpp  log_view.hpp  object.cpp  object.hpp  render_cache.cpp  render_cache.hpp  renderable.cpp  renderable.hpp  shader.cpp  shader.hpp  stb_impl.cpp  texture.cpp  texture.hpp  window.cpp  window.hpp
